--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
 
 .button {
   width: 100%;
-  background: #61dafb;
+  background: green;
   border-radius: 4px;
   padding: 8px;
   border: none;
